name:                rawr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rawr#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       aeson >= 1.1.2.0,
                       ansi-terminal >= 0.6.3.1,
                       base >= 4.7 && < 5,
                       bytestring >= 0.10.8.1,
                       mtl >= 2.2.1,
                       parallel >= 3.2.1.1,
                       yesod >= 1.4.5
  default-language:    Haskell2010

executable rawr-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson >= 1.1.2.0
                     , ansi-terminal >= 0.6.3.1
                     , base
                     , bytestring >= 0.10.8.1
                     , mtl >= 2.2.1
                     , parallel >= 3.2.1.1
                     , rawr
                     , yesod >= 1.4.5
  default-language:    Haskell2010

test-suite rawr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       aeson >= 1.1.2.0
                     , ansi-terminal >= 0.6.3.1
                     , base
                     , bytestring >= 0.10.8.1
                     , mtl >= 2.2.1
                     , parallel >= 3.2.1.1
                     , rawr
                     , yesod >= 1.4.5
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/rawr
