name:                rawr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rawr#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       aeson >= 1.1.2.0,
                       ansi-terminal >= 0.6.3.1,
                       base >= 4.7 && < 5,
                       bytestring >= 0.10.8.1,
                       mtl >= 2.2.1,
                       parallel >= 3.2.1.1,
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/rawr
